# KAIROQUANTUM

./: .env.example  .gitignore  API_REFERENCE.md  AUTOMATION_GUIDE.md  BINANCE_FEATURE_COMPARISON.md  BINANCE_IMPLEMENTATION_SUMMARY.md  COMPLETE_DOCUMENTATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_COMMANDS.sh  DEPLOYMENT_COMPLETE_SUMMARY.md  DEPLOYMENT_MASTER_GUIDE.md  DEPLOYMENT_STATUS_REPORT.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_INDEX.md  DOMAIN_CONFIGURATION.md  FEES_AND_TAXES.md  GITHUB_AND_DNS_SETUP.md  LICENSE  MICROSERVICES_ARCHITECTURE.md  PRE_DOMAIN_SETUP.md  PRODUCTION_STATUS_REPORT.md  PRODUCTION_TEST_REPORT.md  QUICKSTART.md  QUICKSTART_PRODUCTION.md  README.md  STRIPE_AUTOMATION.md  deploy-backend-to-railway.sh  deploy-to-production.sh  docker-compose.autotrading.yml  docker-compose.prod.yml  docker-compose.yml  monitor-dns.sh  next.config.js  package-lock.json  package.json  post-deployment-setup.sh  railway.toml  start-all-services.sh  start-dev-3003.sh  (+4 more)
.github/workflows/: ci.yml
backend/: .env.production.bak  check-users.js  fix-demo-user.js  login_response.html  package-lock.json  package.json
backend/prisma/: schema.prisma  seed.ts
backend/scripts/: quick-api-test.sh  set-admin.ts  test-api-endpoints.sh
python-service/: .env.example  .gitignore  Dockerfile  Dockerfile.poetry  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
python-service/app/: __init__.py  compliance.py  compliance_simple.py  db.py  profit.py  profit_simple.py
scripts/: deploy.sh  setup.sh  start.sh  stop.sh  test.sh
src/app/: globals.css  (+2 more)
(+127 files in other folders)
